Fix for Event card on safari mobile

--- a/src/components/ApiEventBriteCard.scss
+++ b/src/components/ApiEventBriteCard.scss
@@ -353,7 +353,7 @@
   color: #000;
   padding: 5px 15px;
   width: 100%;
-  max-width: 116px;
+  max-width: 120px;
   border-radius: 20px;
   position: relative;
   font-weight: 400;
